[tool.poetry]
name = "partos-brasil"
version = "0.1.0"
description = ""
authors = ["Lucas Lopes Felipe <lucaslopesf2@gmail.com>"]
readme = "README.md"
packages = [{include = "partos_brasil"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
